feat(miniapp): добавить кабинет пользователя, тарифы и звуки
